# bio_studio

./: .gitignore  CLAUDE.md  README.md  add-tool.sh  opencode-test.json  opencode.json  requirements.txt  setup_env.sh  setup_system.sh  start.sh
.claude/agents/: bio-expert.md  lab-automator.md
docs/: AI_ANALYSIS_PROTOCOL.md  AI_TOOL_PROTOCOL.md  BEST_PRACTICES.md  CHANGELOG.md  ENVIRONMENT.md  README.md  bioinformatics.md  bioinformatics_skills_summary.md  skills_create.md
lib/: __init__.py  create_project.py
lib/cli/: run_qc.py
lib/modules/: __init__.py  alignment.py  alignment_msa.py  gene_prediction.py  phylogeny.py  qc.py  samtools_wrapper.py  utils.py  variant.py
mcp-servers/: README.md  claude-config.json  install-all.sh  mcp-requirements.txt
mcp-servers/bio-database-mcp/: README.md  database_server.py  pyproject.toml
mcp-servers/bio-sequence-mcp/: README.md  pyproject.toml  sequence_server.py
mcp-servers/bio-structure-mcp/: README.md  pyproject.toml  structure_server.py
projects/example_rnaseq/: README.md
projects/test_env_validation/: README.md
projects/test_rnaseq_analysis/: ANALYSIS_REPORT_2026.md  README.md
projects/yeast_genome_learning/: QUICKSTART.md  README.md
projects/yeast_rnaseq_demo/: ANALYSIS_PAPER.md  README.md
scripts/: setup_genome_database.sh
scripts/maintenance/: generate_env_report.py  install_bio_tools.sh  install_missing_deps.sh
scripts/setup/: setup_evo2_env.sh  setup_rfdiffusion.sh
shared_data/: README.md
shared_data/references/: ebov_zaire.fa.fai  ebov_zaire_index.2.bt2  ebov_zaire_index.3.bt2  (+2 more)
(+142 files in other folders)
