[project]
name = "bio-structure-mcp"
version = "0.1.0"
description = "Bio Structure Analysis MCP Server - 提供蛋白质结构分析功能"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.9.0",
    "biopython>=1.83",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bio-structure-mcp = "structure_server:main"

[project.optional-dependencies]
esm = ["fair-esm>=2.0.0", "torch>=2.0.0"]
